# callable-registry

./: .gitignore  Makefile  example.py  package-lock.json  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py
.circleci/: config.yml
registry/: __init__.py  registry.py  version.py
tests/: test_registry.py
